# ai-buffet

./: .gitignore  README.md  pyproject.toml
.github/: CODEOWNERS
mcp/: server.py
